--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ header .container{
 }
 header{
     position: fixed;
-    background-color: rgb(228, 241, 255);
+    background-color: white;
+    border: 1px solid #808080;
     top: 0;
     z-index: 10;
     width: 100%;
