--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header .container{
 header{
     position: fixed;
     background-color: white;
-    border: 1px solid #808080;
+    border-bottom: 1px solid #808080;
     top: 0;
     z-index: 10;
     width: 100%;
