--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ header{
     z-index: 10;
     width: 100%;
     padding: 10px;
-    transition: top 0.2s ease-in-out;
+    opacity: 0;
+    animation: appear 0.5s 2.45s normal forwards; 
 }
 header nav ul{
     display: flex;
@@ -405,11 +406,14 @@ footer a:hover {
 @keyframes tada {
     0%{
         opacity: 0.5;
-        width: 65vw;
+        width: 40vw;
     }
-    100%{
+    30%{
         opacity: 1;
         width: 70vw;
+    }
+    100%{
+        width: 65vw;
     }
 }
 @keyframes overflow {
@@ -426,7 +430,11 @@ footer a:hover {
         transform: translateY(-200%);
     } 
 }
-
+@keyframes appear {
+    100%{
+        opacity: 1;
+    }
+}
 /*여기서부터는 모바일 전용 css--------------------------------------------------------------------------  */
 @media (max-width: 768px) {
     .click:active {
