--- a/style.css
+++ b/style.css
@@ -464,6 +464,22 @@ footer a:hover {
         background-color: #e2e2e2;
         box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.8);
     }
+   @keyframes tada {
+        0%{
+            opacity: 0.5;
+            width: 40vw;
+        }
+        50%{
+            opacity: 1;
+            width: 90vw;
+        }
+        75%{
+            width: 90vw;
+        }
+        100%{
+            width: 75vw;
+        }
+    }
 }
 @media (max-width: 830px) {
     html {
